syntax = "proto3";

package sysconfig;

service SysConfig {
  rpc GetJobConfig(GetJobConfigRequest) returns (GetJobConfigResponse);
  rpc SetJobConfig(SetJobConfigRequest) returns (SetJobConfigResponse);
  rpc GetJobBurstConfig(GetJobBurstConfigRequest) returns (GetJobBurstConfigResponse);
  rpc SetJobBurstConfig(SetJobBurstConfigRequest) returns (SetJobBurstConfigResponse);
  rpc GetRBACDefaultRoleId(GetRBACDefaultRoleIdRequest) returns (GetRBACDefaultRoleIdResponse);
  rpc SetRBACDefaultRoleId(SetRBACDefaultRoleIdRequest) returns (SetRBACDefaultRoleIdResponse);
  rpc GetThreePersonDefaultUserId(GetThreePersonDefaultUserIdRequest) returns (GetThreePersonDefaultUserIdResponse);
}

message GetJobConfigRequest {}

message GetJobConfigResponse {
  string queue = 1;
}

message SetJobConfigRequest {
  string queue = 1;
}

message  SetJobConfigResponse {}

message GetJobBurstConfigRequest {}

message GetJobBurstConfigResponse {
  bool enable = 1;
  int64 threshold = 2;
}

message SetJobBurstConfigRequest {
  bool enable = 1;
  int64 threshold = 2;
}

message  SetJobBurstConfigResponse {}

message GetRBACDefaultRoleIdRequest {}

message GetRBACDefaultRoleIdResponse {
  int64 role_id = 1;
}

message SetRBACDefaultRoleIdRequest {
  int64 role_id = 1;
}

message SetRBACDefaultRoleIdResponse {}


message GetThreePersonDefaultUserIdRequest {}

message GetThreePersonDefaultUserIdResponse {
  int64 user_id = 1;
}
